// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-fHGsUi cnSgXN"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-fHGsUi cnSgXN"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-fHGsUi cnSgXN"
>
  <span
    className="sc-ihWozo bTAJXS"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-fHGsUi cnSgXN"
>
  <div
    className="sc-lcfOiJ fAVrzs"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-fHGsUi kyWWFu"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-fHGsUi kpSxry"
  size="small"
/>
`;
